Update href tree

--- a/PeeledBars.html
+++ b/PeeledBars.html
@@ -1,56 +1,69 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>C. Lal</title>
+<html lang="en">
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="./PeeledBars_files/w3.css">
-<link rel="stylesheet" href="./PeeledBars_files/css">
-<link rel="stylesheet" href="./PeeledBars_files/font-awesome.min.css">
-<style>
-body {font-family: "Lato", sans-serif}
-.mySlides {display: none}
-</style>
-</head><body>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <title>C. Lal Bright Steels</title>
 
-<!-- Navbar -->
-<div class="w3-top">
-  <div class="w3-bar w3-black w3-card">
-    <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="Index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
-    <div class="w3-dropdown-hover w3-hide-small">
-      <button class="w3-padding-large w3-button" title="More">OUR PRODUCTS <i class="fa fa-caret-down"></i></button>     
-      <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="DrawnBars.html" class="w3-bar-item w3-button">Drawn Bars</a>
-        <a href="PeeledBars.html" class="w3-bar-item w3-button">Peeled Bars</a>
-        <a href="GroundBars.html" class="w3-bar-item w3-button">Ground Bars</a>
-        <a href="TargetProducts.html" class="w3-bar-item w3-button">Target Products</a>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./PeeledBars_files/w3.css">
+  <link rel="stylesheet" href="./PeeledBars_files/css">
+  <link rel="stylesheet" href="./PeeledBars_files/font-awesome.min.css">
+  <style>
+    body {
+      font-family: "Lato", sans-serif
+    }
+
+    .mySlides {
+      display: none
+    }
+  </style>
+</head>
+
+<body>
+
+  <!-- Navbar -->
+  <div class="w3-top">
+    <div class="w3-bar w3-black w3-card">
+      <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)"
+        onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+      <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+      <div class="w3-dropdown-hover w3-hide-small">
+        <button class="w3-padding-large w3-button" title="More">OUR PRODUCTS <i class="fa fa-caret-down"></i></button>
+        <div class="w3-dropdown-content w3-bar-block w3-card-4">
+          <a href="DrawnBars.html" class="w3-bar-item w3-button">Drawn Bars</a>
+          <a href="PeeledBars.html" class="w3-bar-item w3-button">Peeled Bars</a>
+          <a href="GroundBars.html" class="w3-bar-item w3-button">Ground Bars</a>
+          <a href="TargetProducts.html" class="w3-bar-item w3-button">Target Products</a>
+        </div>
       </div>
-    </div>
-    <a href="OurStrengths.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">OUR STRENGTHS</a>
-    <div class="w3-dropdown-hover w3-hide-small">
-      <button class="w3-padding-large w3-button" title="More">FACILITIES <i class="fa fa-caret-down"></i></button>     
-      <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="ProcessFlowChart.html" class="w3-bar-item w3-button">Process Flow Chart</a>
-        <a href="Drawing.html" class="w3-bar-item w3-button">Drawing</a>
-        <a href="PeelingandReeling.html" class="w3-bar-item w3-button">Peeling and Reeling</a>
-        <a href="Grinding.html" class="w3-bar-item w3-button">Grinding</a>
+      <a href="OurStrengths.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">OUR STRENGTHS</a>
+      <div class="w3-dropdown-hover w3-hide-small">
+        <button class="w3-padding-large w3-button" title="More">FACILITIES <i class="fa fa-caret-down"></i></button>
+        <div class="w3-dropdown-content w3-bar-block w3-card-4">
+          <a href="ProcessFlowChart.html" class="w3-bar-item w3-button">Process Flow Chart</a>
+          <a href="Drawing.html" class="w3-bar-item w3-button">Drawing</a>
+          <a href="PeelingandReeling.html" class="w3-bar-item w3-button">Peeling and Reeling</a>
+          <a href="Grinding.html" class="w3-bar-item w3-button">Grinding</a>
+          <a href="cutting.html" class="w3-bar-item w3-button">Cutting</a>
+        </div>
       </div>
-    </div>
-    <a href="testing.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TESTING AND CERTIFICATION</a>
-    <a href="grades.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">GRADES</a>
-    <div class="w3-dropdown-hover w3-hide-small">
-      <button class="w3-padding-large w3-button" title="More">TECH CENTER <i class="fa fa-caret-down"></i></button>     
-      <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="Chem.html" class="w3-bar-item w3-button">Chemical Specifications</a>
-        <a href="Tolerances.html" class="w3-bar-item w3-button">Dia Tolerances</a>
+      <a href="testing.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TESTING AND CERTIFICATION</a>
+      <a href="grades.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">GRADES</a>
+      <div class="w3-dropdown-hover w3-hide-small">
+        <button class="w3-padding-large w3-button" title="More">TECH CENTER <i class="fa fa-caret-down"></i></button>
+        <div class="w3-dropdown-content w3-bar-block w3-card-4">
+          <a href="Chem.html" class="w3-bar-item w3-button">Chemical Specifications</a>
+          <a href="Tolerances.html" class="w3-bar-item w3-button">Dia Tolerances</a>
+        </div>
       </div>
+      <a href="contact.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT US</a>
+      <a href="faq.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FREQUENTLY ASKED QUESTIONS</a>
     </div>
-    <a href="contact.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT US</a>
-    <a href="faq.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FREQUENTLY ASKED QUESTIONS</a>
   </div>
-</div>
 
-<!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-<!-- 
+  <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
+  <!-- 
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
   <a href="#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">BAND</a>
   <a href="#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">TOUR</a>
@@ -58,72 +71,81 @@ body {font-family: "Lato", sans-serif}
   <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
 </div>
  -->
-	
-<!-- Page content -->
-<div class="w3-content" style="max-width:2000px;margin-top:46px">
 
-  <!-- Automatic Slideshow Images -->
-<div class="w3-white" id="slideshow">
-  <div class="mySlides w3-display-container w3-center" style="display: block;">
-    <br><br><img src="./PeeledBars_files/Peeling.png" alt="image" style="width:70%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+  <!-- Page content -->
+  <div class="w3-content" style="max-width:2000px;margin-top:46px">
+
+    <!-- Automatic Slideshow Images -->
+    <div class="w3-white" id="slideshow">
+      <div class="mySlides w3-display-container w3-center" style="display: block;">
+        <br><br><img src="./PeeledBars_files/Peeling.png" alt="image" style="width:70%">
+        <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+        </div>
+      </div>
     </div>
+
+    <!-- The Band Section -->
+    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+      <h1 class="w3-wide"><b>PEELED BARS</b></h1>
+      <p class="w3-justify">
+        <font size="3">Many product applications require a Defect Free surface for critical end-user applications be it
+          for cold forging, Cold heading , Safety applications like Hydaraulic Cylinder shafts . In such cases, C.Lal
+          provides centerless turned and Ground Bars removing scales, seems, deformations, decarbonized layer and other
+          imperfections resulting from hot rolling, continuous casting and other processes used for making steel bars .
+          C. Lal provides a wide range of capabilities utilizing high speed, efficient centerless turning machines
+          providing dimensional control comparable to cold drawn material with a smooth and bright finish.</font>
+      </p>
+      <br><img src="./PeeledBars_files/PeeledBars.png" alt="image" style="width:100%">
+    </div>
+
+    <!-- The Contact Section -->
+
   </div>
-  </div>
 
-  <!-- The Band Section -->
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-    <h1 class="w3-wide"><b>PEELED BARS</b></h1>
-    <p class="w3-justify"><font size="3">Many product applications require a Defect Free surface for critical end-user applications be it for cold forging, Cold heading , Safety applications like Hydaraulic Cylinder shafts . In such cases, C.Lal provides centerless turned and Ground Bars removing scales, seems, deformations, decarbonized layer and other imperfections resulting from hot rolling, continuous casting and other processes used for making steel bars . C. Lal provides a wide range of capabilities utilizing high speed, efficient centerless turning machines providing dimensional control comparable to cold drawn material with a smooth and bright finish.</font></p>
-	<br><img src="./PeeledBars_files/PeeledBars.png" alt="image" style="width:100%">
-  </div>
-
-  <!-- The Contact Section -->
-
-  </div>
-	
-	<!-- End Page Content -->
+  <!-- End Page Content -->
 
 
-<!-- Image of location/map -->
-<img src="./PeeledBars_files/Bars.jpg" alt="image" class="w3-image w3-greyscale-min" style="width:100%">
+  <!-- Image of location/map -->
+  <img src="./PeeledBars_files/Bars.jpg" alt="image" class="w3-image w3-greyscale-min" style="width:100%">
 
-<script>
-// Automatic Slideshow - change image every 4 seconds
-var myIndex = 0;
-carousel();
+  <script>
+    // Automatic Slideshow - change image every 4 seconds
+    var myIndex = 0;
+    carousel();
 
-function carousel() {
-  var i;
-  var x = document.getElementsByClassName("mySlides");
-  for (i = 0; i < x.length; i++) {
-    x[i].style.display = "none";  
-  }
-  myIndex++;
-  if (myIndex > x.length) {myIndex = 1}    
-  x[myIndex-1].style.display = "block";  
-  setTimeout(carousel, 4000);    
-}
+    function carousel() {
+      var i;
+      var x = document.getElementsByClassName("mySlides");
+      for (i = 0; i < x.length; i++) {
+        x[i].style.display = "none";
+      }
+      myIndex++;
+      if (myIndex > x.length) { myIndex = 1 }
+      x[myIndex - 1].style.display = "block";
+      setTimeout(carousel, 4000);
+    }
 
-// Used to toggle the menu on small screens when clicking on the menu button
-function myFunction() {
-  var x = document.getElementById("navDemo");
-  if (x.className.indexOf("w3-show") == -1) {
-    x.className += " w3-show";
-  } else { 
-    x.className = x.className.replace(" w3-show", "");
-  }
-}
+    // Used to toggle the menu on small screens when clicking on the menu button
+    function myFunction() {
+      var x = document.getElementById("navDemo");
+      if (x.className.indexOf("w3-show") == -1) {
+        x.className += " w3-show";
+      } else {
+        x.className = x.className.replace(" w3-show", "");
+      }
+    }
 
-// When the user clicks anywhere outside of the modal, close it
-var modal = document.getElementById('ticketModal');
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-</script>
+    // When the user clicks anywhere outside of the modal, close it
+    var modal = document.getElementById('ticketModal');
+    window.onclick = function (event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+  </script>
 
 
 
-</body></html>
+</body>
+
+</html>
