--- a/Tolerances.html
+++ b/Tolerances.html
@@ -29,7 +29,7 @@
           title="Toggle Navigation Menu"
           ><i class="fa fa-bars"></i
         ></a>
-        <a href="Index.html" class="w3-bar-item w3-button w3-padding-large"
+        <a href="index.html" class="w3-bar-item w3-button w3-padding-large"
           >HOME</a
         >
         <div class="w3-dropdown-hover w3-hide-small">
