--- a/GroundBars.html
+++ b/GroundBars.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+<title>C. Lal Bright Steels</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+<style>
+  body {
+    font-family: "Lato", sans-serif;
+  }
 
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>C. Lal Bright Steels</title>
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./GroundBars_files/w3.css">
-  <link rel="stylesheet" href="./GroundBars_files/css">
-  <link rel="stylesheet" href="./GroundBars_files/font-awesome.min.css">
-  <style>
-    body {
-      font-family: "Lato", sans-serif
-    }
-
-    .mySlides {
-      display: none
-    }
-  </style>
-</head>
+  .mySlides {
+    display: none;
+  }
+</style>
 
 <body>
-
   <!-- Navbar -->
   <div class="w3-top">
     <div class="w3-bar w3-black w3-card">
