--- a/Tolerances.html
+++ b/Tolerances.html
@@ -19,98 +19,77 @@
   </head>
   <body>
     <!-- Navbar -->
-    <!-- Navbar -->
-    <div class="w3-top">
-      <div class="w3-bar w3-black w3-card">
-        <a
-          class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right"
-          href="javascript:void(0)"
-          onclick="myFunction()"
-          title="Toggle Navigation Menu"
-          ><i class="fa fa-bars"></i
-        ></a>
-        <a href="index.html" class="w3-bar-item w3-button w3-padding-large"
-          >HOME</a
-        >
-        <div class="w3-dropdown-hover w3-hide-small">
-          <button class="w3-padding-large w3-button" title="More">
-            OUR PRODUCTS <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="w3-dropdown-content w3-bar-block w3-card-4">
-            <a href="DrawnBars.html" class="w3-bar-item w3-button"
-              >Drawn Bars</a
-            >
-            <a href="PeeledBars.html" class="w3-bar-item w3-button"
-              >Peeled Bars</a
-            >
-            <a href="GroundBars.html" class="w3-bar-item w3-button"
-              >Ground Bars</a
-            >
-            <a href="TargetProducts.html" class="w3-bar-item w3-button"
-              >Target Products</a
-            >
-          </div>
+<!-- Navbar -->
+<div class="w3-top">
+  <div class="w3-bar w3-black w3-card">
+    <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a href="Index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+    <div class="w3-dropdown-hover w3-hide-small">
+      <button class="w3-padding-large w3-button" title="More">OUR PRODUCTS <i class="fa fa-caret-down"></i></button>     
+      <div class="w3-dropdown-content w3-bar-block w3-card-4">
+        <a href="DrawnBars.html" class="w3-bar-item w3-button">Drawn Bars</a>
+        <a href="PeeledBars.html" class="w3-bar-item w3-button">Peeled Bars</a>
+        <a href="GroundBars.html" class="w3-bar-item w3-button">Ground Bars</a>
+        <a href="TargetProducts.html" class="w3-bar-item w3-button">Target Products</a>
+  <!-- Navbar -->
+  <div class="w3-top">
+    <div class="w3-bar w3-black w3-card">
+      <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)"
+        onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+      <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+      <div class="w3-dropdown-hover w3-hide-small">
+        <button class="w3-padding-large w3-button" title="More">OUR PRODUCTS <i class="fa fa-caret-down"></i></button>
+        <div class="w3-dropdown-content w3-bar-block w3-card-4">
+          <a href="DrawnBars.html" class="w3-bar-item w3-button">Drawn Bars</a>
+          <a href="PeeledBars.html" class="w3-bar-item w3-button">Peeled Bars</a>
+          <a href="GroundBars.html" class="w3-bar-item w3-button">Ground Bars</a>
+          <a href="TargetProducts.html" class="w3-bar-item w3-button">Target Products</a>
         </div>
-        <a
-          href="OurStrengths.html"
-          class="w3-bar-item w3-button w3-padding-large w3-hide-small"
-          >OUR STRENGTHS</a
-        >
-        <div class="w3-dropdown-hover w3-hide-small">
-          <button class="w3-padding-large w3-button" title="More">
-            FACILITIES <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="w3-dropdown-content w3-bar-block w3-card-4">
-            <a href="ProcessFlowChart.html" class="w3-bar-item w3-button"
-              >Process Flow Chart</a
-            >
-            <a href="Drawing.html" class="w3-bar-item w3-button">Drawing</a>
-            <a href="PeelingandReeling.html" class="w3-bar-item w3-button"
-              >Peeling and Reeling</a
-            >
-            <a href="Grinding.html" class="w3-bar-item w3-button">Grinding</a>
-          </div>
-        </div>
-        <a
-          href="testing.html"
-          class="w3-bar-item w3-button w3-padding-large w3-hide-small"
-          >TESTING AND CERTIFICATION</a
-        >
-        <a
-          href="grades.html"
-          class="w3-bar-item w3-button w3-padding-large w3-hide-small"
-          >GRADES</a
-        >
-
-        <div class="w3-dropdown-hover w3-hide-small">
-          <button class="w3-padding-large w3-button" title="More">
-            TECH CENTER <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="w3-dropdown-content w3-bar-block w3-card-4">
-            <a href="Chem.html" class="w3-bar-item w3-button"
-              >Chemical Specifications</a
-            >
-            <a href="Tolerances.html" class="w3-bar-item w3-button"
-              >Dia Tolerances</a
-            >
-          </div>
-        </div>
-
-        <a
-          href="contact.html"
-          class="w3-bar-item w3-button w3-padding-large w3-hide-small"
-          >CONTACT US</a
-        >
-        <a
-          href="faq.html"
-          class="w3-bar-item w3-button w3-padding-large w3-hide-small"
-          >FREQUENTLY ASKED QUESTIONS</a
-        >
       </div>
     </div>
+    <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">OUR STRENGTHS</a>
+    <div class="w3-dropdown-hover w3-hide-small">
+      <button class="w3-padding-large w3-button" title="More">FACILITIES <i class="fa fa-caret-down"></i></button>     
+      <div class="w3-dropdown-content w3-bar-block w3-card-4">
+        <a href="ProcessFlowChart.html" class="w3-bar-item w3-button">Process Flow Chart</a>
+        <a href="Drawing.html" class="w3-bar-item w3-button">Drawing</a>
+        <a href="PeelingandReeling.html" class="w3-bar-item w3-button">Peeling and Reeling</a>
+        <a href="Grinding.html" class="w3-bar-item w3-button">Grinding</a>
+      <a href="OurStrengths.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">OUR STRENGTHS</a>
+      <div class="w3-dropdown-hover w3-hide-small">
+        <button class="w3-padding-large w3-button" title="More">FACILITIES <i class="fa fa-caret-down"></i></button>
+        <div class="w3-dropdown-content w3-bar-block w3-card-4">
+          <a href="ProcessFlowChart.html" class="w3-bar-item w3-button">Process Flow Chart</a>
+          <a href="Drawing.html" class="w3-bar-item w3-button">Drawing</a>
+          <a href="PeelingandReeling.html" class="w3-bar-item w3-button">Peeling and Reeling</a>
+          <a href="Grinding.html" class="w3-bar-item w3-button">Grinding</a>
+          <a href="cutting.html" class="w3-bar-item w3-button">Cutting</a>
+        </div>
+      </div>
+      <a href="testing.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TESTING AND CERTIFICATION</a>
+      <a href="grades.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">GRADES</a>
+      <div class="w3-dropdown-hover w3-hide-small">
+        <button class="w3-padding-large w3-button" title="More">TECH CENTER <i class="fa fa-caret-down"></i></button>
+        <div class="w3-dropdown-content w3-bar-block w3-card-4">
+          <a href="Chem.html" class="w3-bar-item w3-button">Chemical Specifications</a>
+          <a href="Tolerances.html" class="w3-bar-item w3-button">Dia Tolerances</a>
+        </div>
+      </div>
+      <a href="contact.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT US</a>
+      <a href="faq.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FREQUENTLY ASKED QUESTIONS</a>
+    </div>
+    <a href="testing.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TESTING AND CERTIFICATION</a>
+    <a href="grades.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">GRADES</a>
+    <a href="tech.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TECH CENTER</a>
+    <a href="contact.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT US</a>
+    <a href="faq.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FREQUENTLY ASKED QUESTIONS</a>
+  </div>
+</div>
 
-    <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-    <!-- 
+<!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
+<!-- 
+  <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
+  <!-- 
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
   <a href="#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">BAND</a>
   <a href="#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">TOUR</a>
