--- a/Chem.html
+++ b/Chem.html
@@ -143,7 +143,7 @@
 
     <!-- Image of location/map -->
     <img
-      src="./Tolerances_files/Bars.jpg"
+      src="./Chem_files/Bars.jpg"
       alt="image"
       class="w3-image w3-greyscale-min"
       style="width: 100%"
