Add missing photos

--- a/Grinding.html
+++ b/Grinding.html
@@ -73,18 +73,18 @@
     <!-- Automatic Slideshow Images -->
     <!-- Automatic Slideshow Images -->
     <div class="w3-black" id="slideshow">
-      <div class="mySlides w3-display-container w3-center">
-        <img src="P1030020.JPG" alt="image" style="width:40%">
+      <div class="mySlides w3-display-container w3-center" style="display: none;">
+        <img src="./GroundBars_files/P1030020.JPG" alt="image" style="width:50%">
         <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
         </div>
       </div>
-      <div class="mySlides w3-display-container w3-center">
-        <img src="Grinding2.png" alt="image" style="width:86.5%">
+      <div class="mySlides w3-display-container w3-center" style="display: block;">
+        <br> <img src="./GroundBars_files/Grinding2.png" alt="image" style="width:95%">
         <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
         </div>
       </div>
-      <div class="mySlides w3-display-container w3-center">
-        <img src="Quality consistency.jpg" alt="image" style="width:67%">
+      <div class="mySlides w3-display-container w3-center" style="display: none;">
+        <img src="./GroundBars_files/Quality consistency.jpg" alt="image" style="width:75%">
         <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
         </div>
       </div>
