--- a/testing.html
+++ b/testing.html
@@ -105,18 +105,10 @@
           (CL/QC/04) to confirm chemical and physical results. This report is
           combined with our invoice for easier record-keeping for our
           customers.<br /><br /></font>
-        <font size="4"><b>EDDY CURRENT METAL SORTER FOR GRADE VERIFICATION</b><br /></font>
+        <font size="4"><b>MAGNAFLUX AND ULTRASONIC TESTING FOR DEFECTS</b><br /><br /></font>
         <img src="./testing_files/Eddy Current grade sorter.jpg" alt="image" style="width: 40%" /><br /><br />
-        <font size="3">Eddy Current metal sorter checks steel chemically beyond doubt.
-          Non-Destructive spark test is used regularly as a means of product
-          grade verification qualitatively.<br /><br /></font>
-        <font size="4"><b>EDDY CURRENT, MAGNAFLUX, AND ULTRASONIC TESTING FOR DEFECTS</b><br /><br /></font>
-        <br />
-        <img src="./testing_files/Ultrasonic - DS324.png" alt="image" style="width: 80%" /><br /><br />
-        <font size="3">Fully automated Dr. FOERSTER eddy current test system with rotating
-          probes guarantees maximum detection sensitivity for exposed
-          longitudinal and transverse surface defects on bright material. Our
-          3-Meter Magnaflux machine reveals all Surface and next-to-surface
+        <font size="3">Non-Destructive spark test is used regularly as a means of product
+          grade verification qualitatively. Our 3-Meter Magnaflux machine reveals all Surface and next-to-surface
           defects showing their length, intensity, etc. The fluorescent
           magnetic powder makes visible even the minor seams, which are
           otherwise not visible to the human eye. Ultrasonic Test reveals all
