--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
           <li class="w3-padding">
             <font size="4">DIVERSITY </font>
             <p>
-              <font size="3"><b>We offer drawing, peeling, grinding, band saw cutting, Eddy
-                  Current, MPI, Ultrasonic, Round, Square, rectangle, hexagon,
+              <font size="3"><b>We offer drawing, peeling, grinding, band saw cutting,
+                  MPI, Ultrasonic, Round, Square, rectangle, hexagon,
                   Octagon, Sections - D, Double D, Round with 2 notch - 4
                   notch, Hex with notch almost anything and everything.</b></font>
             </p>
